erDiagram
    %% ========================================================================
    %% PassGen — ER-диаграмма базы данных
    %% Версия: 0.5.0
    %% Дата: 10 марта 2026
    %% ========================================================================

    %% ------------------------------------------------------------------------
    %% Таблица: categories
    %% Описание: Категории паролей (системные и пользовательские)
    %% ------------------------------------------------------------------------
    categories {
        int id PK "Первичный ключ"
        string name "Название категории"
        string icon "Иконка (Material Icons)"
        int is_system "Системная (1) или пользовательская (0)"
        int created_at "Timestamp создания"
    }

    %% ------------------------------------------------------------------------
    %% Таблица: password_entries
    %% Описание: Основные записи паролей
    %% ------------------------------------------------------------------------
    password_entries {
        int id PK "Первичный ключ"
        int category_id FK "Внешний ключ на categories"
        string service "Название сервиса (например, 'Gmail')"
        string login "Логин пользователя"
        blob encrypted_password "Зашифрованный пароль (ChaCha20-Poly1305)"
        blob nonce "Уникальный номер для шифрования (12 байт)"
        int created_at "Timestamp создания"
        int updated_at "Timestamp последнего обновления"
    }

    %% ------------------------------------------------------------------------
    %% Таблица: password_configs
    %% Описание: Конфигурации генерации для каждого пароля
    %% ------------------------------------------------------------------------
    password_configs {
        int id PK "Первичный ключ"
        int entry_id FK "Внешний ключ на password_entries (UNIQUE)"
        int strength "Уровень сложности (0-4)"
        int min_length "Минимальная длина пароля"
        int max_length "Максимальная длина пароля"
        int flags "Битовая маска наборов символов"
        int require_unique "Требование уникальных символов (0/1)"
        blob encrypted_config "Зашифрованная конфигурация"
    }

    %% ------------------------------------------------------------------------
    %% Таблица: security_logs
    %% Описание: Журнал событий безопасности
    %% ------------------------------------------------------------------------
    security_logs {
        int id PK "Первичный ключ"
        string action_type "Тип события (AUTH_SUCCESS, PWD_CREATED, и т.д.)"
        int timestamp "Timestamp события"
        string details "Дополнительные детали (JSON)"
    }

    %% ------------------------------------------------------------------------
    %% Таблица: app_settings
    %% Описание: Настройки приложения
    %% ------------------------------------------------------------------------
    app_settings {
        string key PK "Ключ настройки"
        string value "Значение настройки"
        int encrypted "Зашифровано (1) или нет (0)"
    }

    %% ========================================================================
    %% СВЯЗИ МЕЖДУ ТАБЛИЦАМИ
    %% ========================================================================

    %% Одна категория содержит много записей паролей
    categories ||--o{ password_entries : "contains"

    %% Одна запись пароля имеет одну конфигурацию (1:1)
    password_entries ||--|| password_configs : "has_config"

    %% ========================================================================
    %% ИНДЕКСЫ (не отображаются в диаграмме, но документированы)
    %% ========================================================================
    %% password_entries:
    %%   - idx_password_entries_category (category_id)
    %%   - idx_password_entries_service (service)
    %% 
    %% password_configs:
    %%   - idx_password_configs_entry (entry_id)
    %% 
    %% security_logs:
    %%   - idx_security_logs_timestamp (timestamp)
    %%   - idx_security_logs_type (action_type)
    %% 
    %% ========================================================================
    %% ТИПЫ СОБЫТИЙ БЕЗОПАСНОСТИ (security_logs.action_type)
    %% ========================================================================
    %% - AUTH_SUCCESS      — Успешная аутентификация
    %% - AUTH_FAIL         — Неудачная попытка входа
    %% - LOGOUT            — Выход из приложения
    %% - PWD_CREATED       — Создание пароля
    %% - PWD_DELETED       — Удаление пароля
    %% - PWD_UPDATED       — Обновление пароля
    %% - PWD_ACCESSED      — Просмотр пароля (v0.5.0)
    %% - EXPORT            — Экспорт данных
    %% - IMPORT            — Импорт данных
    %% - PIN_CHANGED       — Смена PIN-кода
    %% - PIN_REMOVED       — Удаление PIN-кода
    %% - SETTINGS_CHG      — Изменение настроек (v0.5.0)
    %% 
    %% ========================================================================
    %% СИСТЕМНЫЕ КАТЕГОРИИ (categories)
    %% ========================================================================
    %% 1. Интернет (language)
    %% 2. Социальные сети (people)
    %% 3. Развлечения (entertainment)
    %% 4. Работа (work)
    %% 5. Финансы (attach_money)
    %% 6. Покупки (shopping_cart)
    %% 7. Почта (email)
    %% 
    %% ========================================================================
